[package]
name = "atproto-scheduling"
version = "0.1.0"
edition = "2024"
author = "Eric Hamilton <etj2206@rit.edu>"

[dependencies]
axum = "0.8.4"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "*"
